update profile checking
