# docs/swagger.yaml
@@ -42,7 +42,7 @@ paths:
       parameters:
       - description: User ID from Gateway
         in: header
-        name: X-User-Id
+        name: x-user-id
         required: true
         type: string
       - description: CompleteProfile user
@@ -57,6 +57,25 @@ paths:
         "200":
           description: OK
       summary: CompleteProfile
+      tags:
+      - Auth
+  /api/v1/auth/profile-completion:
+    get:
+      consumes:
+      - application/json
+      description: ProfileCompletion
+      parameters:
+      - description: User ID from Gateway
+        in: header
+        name: x-user-id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: ProfileCompletion
       tags:
       - Auth
   /api/v1/auth/signin:
